# six_dof_hand

./: 2018-08-15-00-16-15.bag  README.md
bagfiles/: 2018-11-27-03-01-54-trimmed.bag
six_dof_cam_control/: CMakeLists.txt  package.xml
six_dof_cam_control/config/: controller.yaml
six_dof_cam_control/launch/: six_dof_cam_controll.launch
six_dof_cam_description/: CMakeLists.txt  package.xml
six_dof_cam_description/launch/: display.launch
six_dof_cam_description/launch/config/: config.rviz  urdf.rviz
six_dof_cam_description/urdf/: six_dof_cam.urdf  six_dof_cam.xacro
six_dof_cam_description/urdf/base/: base.gazebo.xacro  base.xacro
six_dof_cam_description/urdf/camera/: camera.gazebo.xacro  camera.xacro  old
six_dof_cam_description/urdf/linear_actuator/: linear_actuator.gazebo.xacro  (+1 more)
six_dof_cam_gazebo/: CMakeLists.txt  package.xml
six_dof_cam_gazebo/launch/: open_empty_world.launch  six_dof_cam_with_emptyworld.launch
six_dof_cam_gazebo/worlds/: hello.world
six_dof_hand_control/: CMakeLists.txt  package.xml
six_dof_hand_control/config/: controller.yaml
six_dof_hand_control/launch/: six_dof_hand_controll.launch
six_dof_hand_description/: CMakeLists.txt  package.xml
six_dof_hand_description/launch/: display.launch
six_dof_hand_description/urdf/: six_dof_hand.xacro
six_dof_hand_gazebo/: CMakeLists.txt  package.xml
six_dof_hand_gazebo/launch/: open_empty_world.launch  six_dof_hand_with_emptyworld.launch
six_dof_hand_vr_controller/: CMakeLists.txt  package.xml
six_dof_hand_vr_controller/scripts/: pose_subscriber.py  vr_controller.py
(+14 files in other folders)
